<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_img"
        android:title="@string/title_home" />

    <item
        android:id="@+id/consulting"
        android:icon="@drawable/ic_consulting_img"
        android:title="@string/title_consulting" />

    <item
        android:id="@+id/service"
        android:icon="@drawable/ic_service_img"
        android:title="@string/title_service" />

    <item
        android:id="@+id/science"
        android:icon="@drawable/ic_science_img"
        android:title="@string/title_science" />

    <item
        android:id="@+id/mine"
        android:icon="@drawable/ic_mine_img"
        android:title="@string/title_mine" />

</menu>
